improv: Add Models and AuthEndpoints

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
 # Secret key
-SECRET_KEY ='django-insecure-qev74*uvxtx=@394xw5(7j)l_v75vwvy0wv%vp)kwi*a%7-!3w'
+SECRET_KEY =''
 
+FRONTEND_URL = 'http://localhost:3000'
 # Change DEBUG to True in production
-DEBUG=False
+DEBUG=True
 
 # Database
 DB_ENGINE=django.db.backends.sqlite3
-DB_NAME=mydatabase
-DB_USER=myuser
-DB_PASSWORD=mypassword
-DB_HOST=localhost
-DB_PORT=5432
+# DB_NAME=mydatabase
+# DB_USER=myuser
+# DB_PASSWORD=mypassword
+# DB_HOST=localhost
+# DB_PORT=5432
+
+# Looking to send emails in production? Check out our Email API/SMTP product!
+DEFAULT_FROM_EMAIL = 'fake@fake.com'
+EMAIL_HOST = ''
+EMAIL_HOST_USER = ''
+EMAIL_HOST_PASSWORD = ''
+EMAIL_PORT = ''
