--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
+black==25.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 coreapi==2.3.3
 coreschema==0.0.4
 Django==5.1.8
@@ -14,12 +16,18 @@ idna==3.10
 itypes==1.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+mypy-extensions==1.0.0
 openapi-codec==1.3.2
+packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 python-dotenv==1.1.0
 requests==2.32.3
 simplejson==3.20.1
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
